# ise633

./: .gitignore  hw2.ipynb  hw3.ipynb  hw4.ipynb  hw5.ipynb  pyproject.toml
hw2/: hw2.ipynb
hw4/: y.txt
hw5/: A.txt
test/: test_util_tree.py
utils/: hash.py  platform.py  tree.py
