[project]
name = "ise633" # Required
version = "0.0.1" # Required
requires-python = ">=3.12"

[project.optional-dependencies] # Optional
dev = ["ruff", "pyright", "mypy"]
test = ["pytest"]

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning',
    'ignore:Module already imported so cannot be rewritten:pytest.PytestAssertRewriteWarning',
]

[tool.isort]
src_paths = ["."]
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
typing-modules = ["beartype.typing"]
select = [
  "E4", "E7", "E9",
  "F",
  "UP", # pyupgrade
  # "I",   # isort
]
ignore = ["F722", "E741"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401", "E731"]

# [tool.ruff.lint.isort]
# combine-as-imports = true
# force-wrap-aliases = true
